# Qt_template

./: .gitignore  CMakeLists.txt  main.cpp
